[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch PubMed papers"
authors = ["Ruchita Makwana <ruchitahm@gmail.com>"]
readme = "README.md"
packages = [{include = "papers_fetcher"}]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
click = "^8.1.8"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
