[project]
name = "papers-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruchita Makwana",email = "ruchitahm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "papers_fetcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
